fixed remove creator issue